updates for es language

--- a/assets/configuration.json
+++ b/assets/configuration.json
@@ -15,7 +15,7 @@
         "mode": "dark"
     },
     "language": {
-        "preferred": "es",
+        "preferred": "er",
         "fallback": "en"
     }
 }
