added: authentication token for testing

--- a/assets/configuration.json
+++ b/assets/configuration.json
@@ -13,5 +13,8 @@
     "theme": {
         "baseColor": "0xFF1565C0",
         "mode": "dark"
+    },
+    "debug": {
+        "auth_token": ""
     }
 }
